VNet-With-Subnets_and_NSG/Template.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
   
    "Location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location of all resources"
      }
    },
	 "Virtual-Network-name": {
      "type": "string",
	   "defaultValue": "VNET-1",
      "metadata": {
        "description": "Name of Virtual Network"
      }
    },
    "Virtual-Network-addressPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/16",
      "metadata": {
        "description": "Address-Prefix of Virtual Network in CIDR format"
      }
    },
    "subnet1_Name": {
      "type": "string",
	  "defaultValue": "Web-Subnet",
      "metadata": {
        "description": "Name of Subnet 1"
      }
    },
    "subnet1_AddressPrefix": {
      "type": "string",
      "defaultValue": "10.0.1.0/24",
      "metadata": {
        "description": "Address-Prefix of Subnet 1 in CIDR format"
      }
    },
    "subnet2_Name": {
      "type": "string",
	  "defaultValue": "DB-Subnet",
      "metadata": {
        "description": "Name of Subnet 2"
      }
    },
    "subnet2_AddressPrefix": {
      "type": "string",
      "defaultValue": "10.0.2.0/24",
      "metadata": {
        "description": "Address-Prefix of Subnet 2 in CIDR format"
      }
    },
    "subnet3_Name": {
      "type": "string",
	  "defaultValue": "API-Subnet",
      "metadata": {
        "description": "Name of Subnet 3"
      }
    },
    "subnet3_AddressPrefix": {
      "type": "string",
      "defaultValue": "10.0.3.0/24",
      "metadata": {
        "description": "Address-Prefix of Subnet 3 in CIDR format"
      }
    },
    "Firewall_AddressPrefix": {
      "type": "string",
      "defaultValue": "10.0.4.0/24",
      "metadata": {
        "description": "Address-Prefix of firewall in CIDR format"
      }
    },
    "Management-JumpBox_Subnet_Name": {
      "type": "string",
	  "defaultValue": "JumpBox-Subnet",
      "metadata": {
        "description": "Name of Management-JumpBox Subnet"
      }
    },
    "Management-JumpBox_Subnet_AddressPrefix": {
      "type": "string",
      "defaultValue": "10.0.5.0/24",
      "metadata": {
        "description": "Address-Prefix of Management-JumpBox Subnet  in CIDR format"
      }
    },
    "Webserver_NSG_Name": {
      "type": "string",
      "defaultValue": "Web-NSG",
      "metadata": {
        "description": "Name of Network Security Group for Web server"
      }
    },
    "API_NSG_Name": {
      "type": "string",
      "defaultValue": "API-NSG",
      "metadata": {
        "description": "Name of Network Security Group for API"
      }
    },
    "Database_NSG_Name": {
      "type": "string",
      "defaultValue": "Database-NSG",
      "metadata": {
        "description": "Name of Network Security Group for Database"
      }
    },
    "enableDdosProtection_In_VirtualNetwork": {
      "type": "bool",
	  "defaultValue": false,
      "metadata": {
        "description": "DDoS protection allow or deny"
      }
    }
  },
  "resources": [
    {
      "apiVersion": "2019-02-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('Webserver_NSG_Name')]",
      "location": "[parameters('Location')]",
      "properties": {
        "securityRules": [
          {
            "name": "HTTPorHTTPS-request",
            "properties": {
              "description": "Rule for HTTP request and HTTPS SSL request ",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationPortRanges": [
                "80",
                "443"
              ],
              "destinationAddressPrefix": "[parameters('subnet1_AddressPrefix')]",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "SSHandRDP-to-WEB",
            "properties": {
              "description": "Rule for SSH and RDP Request",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('Management-JumpBox_Subnet_AddressPrefix')]",
              "destinationPortRanges": [
                "22",
                "3389"
              ],
              "destinationAddressPrefix": "[parameters('subnet1_AddressPrefix')]",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "DenyOutBoundToDB",
            "properties": {
              "description": "Rule for denying Out-bound traffic to Database ",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationPortRange": "*",
              "destinationAddressPrefix": "[parameters('subnet3_AddressPrefix')]",
              "access": "Deny",
              "priority": 100,
              "direction": "Outbound"
            }
          },
          {
            "name": "API-Web-response",
            "properties": {
              "description": "Rule for accepting response from API Server",
              "protocol": "Tcp",
              "sourcePortRange": "8083",
              "sourceAddressPrefix": "[parameters('subnet1_AddressPrefix')]",
              "destinationPortRange": "8081",
              "destinationAddressPrefix": "[parameters('subnet2_AddressPrefix')]",
              "access": "Allow",
              "priority": 110,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2019-02-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('API_NSG_Name')]",
      "location": "[parameters('Location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Web-request-API",
            "properties": {
              "description": "Rule for accepting requests from WEB to API ",
              "protocol": "Tcp",
              "sourcePortRange": "8083",
              "sourceAddressPrefix": "[parameters('subnet1_AddressPrefix')]",
              "destinationPortRange": "8081",
              "destinationAddressPrefix": "[parameters('subnet2_AddressPrefix')]",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "SSHandRDP-to-API",
            "properties": {
              "description": "Rule for SSH and RDP Request to API",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('Management-JumpBox_Subnet_AddressPrefix')]",
              "destinationPortRanges": [
                "22",
                "3389"
              ],
              "destinationAddressPrefix": "[parameters('subnet2_AddressPrefix')]",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "FTPfromApi-DB",
            "properties": {
              "description": "Rule for accepting FTP requests from Database to API server",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('subnet2_AddressPrefix')]",
              "destinationPortRange": "21",
              "destinationAddressPrefix": "[parameters('subnet3_AddressPrefix')]",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "API-MySQL-request",
            "properties": {
              "description": "Rule for MySQL request",
              "protocol": "Tcp",
              "sourcePortRange": "118",
              "sourceAddressPrefix": "[parameters('subnet2_AddressPrefix')]",
              "destinationPortRange": "3306",
              "destinationAddressPrefix": "[parameters('subnet3_AddressPrefix')]",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound"
            }
          },
          {
            "name": "API-web-response",
            "properties": {
              "description": "Rule for sending response from API - WEB",
              "protocol": "Tcp",
              "sourcePortRange": "8081",
              "sourceAddressPrefix": "[parameters('subnet2_AddressPrefix')]",
              "destinationPortRange": "8083",
              "destinationAddressPrefix": "[parameters('subnet1_AddressPrefix')]",
              "access": "Allow",
              "priority": 110,
              "direction": "Outbound"
            }
          },
          {
            "name": "FTPtoDB",
            "properties": {
              "description": "Rule for making FTP connection from API to Database server",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('subnet2_AddressPrefix')]",
              "destinationPortRange": "21",
              "destinationAddressPrefix": "[parameters('subnet3_AddressPrefix')]",
              "access": "Allow",
              "priority": 120,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2019-02-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('Database_NSG_Name')]",
      "location": "[parameters('Location')]",
      "properties": {
        "securityRules": [
          {
            "name": "API-DB-request",
            "properties": {
              "description": "Rule for accepting MySQL request from API",
              "protocol": "Tcp",
              "sourcePortRange": "118",
              "sourceAddressPrefix": "[parameters('subnet2_AddressPrefix')]",
              "destinationPortRange": "3306",
              "destinationAddressPrefix": "[parameters('subnet3_AddressPrefix')]",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Web-Database",
            "properties": {
              "description": "Deny direct Communication between DATABASE and WEB subnets.",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnet1_AddressPrefix')]",
              "destinationAddressPrefix": "[parameters('subnet3_AddressPrefix')]",
              "access": "Deny",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "SSHandRDP-from-admin-to-db",
            "properties": {
              "description": "Rule for SSH Request",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('Management-JumpBox_Subnet_AddressPrefix')]",
              "destinationPortRanges": [
                "22",
                "3389"
              ],
              "destinationAddressPrefix": "[parameters('subnet3_AddressPrefix')]",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "FTPfromDB-API",
            "properties": {
              "description": "Rule for making FTP connection from Database to API server",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('subnet2_AddressPrefix')]",
              "destinationPortRange": "21",
              "destinationAddressPrefix": "[parameters('subnet3_AddressPrefix')]",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          },
          {
            "name": "MySQL-API-response",
            "properties": {
              "description": "Rule for MySQL response to API-server",
              "protocol": "Tcp",
              "sourcePortRange": "3306",
              "sourceAddressPrefix": "[parameters('subnet2_AddressPrefix')]",
              "destinationPortRange": "118",
              "destinationAddressPrefix": "[parameters('subnet3_AddressPrefix')]",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound"
            }
          },
          {
            "name": "FTPfromDB-API-Outbound",
            "properties": {
              "description": "Rule for accepting FTP connection from Database to API server",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('subnet3_AddressPrefix')]",
              "destinationPortRange": "21",
              "destinationAddressPrefix": "[parameters('subnet2_AddressPrefix')]",
              "access": "Allow",
              "priority": 110,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2019-02-01",
      "name": "[parameters('Virtual-Network-name')]",
      "type": "Microsoft.Network/virtualNetworks",
      "location": "[parameters('Location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('Webserver_NSG_Name'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('API_NSG_Name'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('Database_NSG_Name'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('Virtual-Network-addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('subnet1_Name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet1_AddressPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('Webserver_NSG_Name'))]"
              }
            }
          },
          {
            "name": "[parameters('subnet2_Name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet2_AddressPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('API_NSG_Name'))]"
              }
            }
          },
          {
            "name": "[parameters('subnet3_Name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet3_AddressPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('Database_NSG_Name'))]"
              }
            }
          },
          {
            "name": "AzureFirewallSubnet",
            "properties": {
              "addressPrefix": "[parameters('Firewall_AddressPrefix')]"
            }
          }
        ],
        "enableDdosProtection": "[parameters('enableDdosProtection_In_VirtualNetwork')]"
      }
    }
  ],
  "outputs": {}
}
